rework budding shrine (#171)